--- a/rewards.html
+++ b/rewards.html
@@ -51,6 +51,7 @@
 
       /*
         For get the reward code; you need to access here and, add as you will find in the example ::
+        btw; the rewards you need to setup with the "write something" thing for work...
             https://www.instafluff.tv/TwitchCustomRewardID/?channel=name_of_your_account
 
 
